# crew_for_deply

./: pyproject.toml  report.md
src/crew_for_deply/: crew.py  main.py
