[project]
name = "crew_for_deply"
version = "0.1.0"
description = "crew_for_deploy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
crew_for_deploy = "crew_for_deply.main:run"
run_crew = "crew_for_deply.main:run"
train = "crew_for_deply.main:train"
replay = "crew_for_deply.main:replay"
test = "crew_for_deply.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
